# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  27 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Document that depend_eth0() only works in conf.d/net and
    not conf.d/net.$profile, #137727.

  27 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Make sure modules-update generates the devfs config files properly #136174.

  25 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Make sure modprobe.conf is generated properly when done by hand otheriwse 
    old syntax can leak in #132668 by Alexander Skwar.

  23 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Fix rc-status broken link reporting properly, #137656

    Replace grep with [[ $(</proc/foo) =~ reges ]]  where appropriate.

  19 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Preliminary support for dscape ieee80211 stack devices.

    Apply vserver patches from Benedikt Boehm.

  18 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Mount binfmt_misc automatically in localmount if available.

    Force stricter mount options on /proc /sys /dev/pts /proc/bus/usb as
    suggested by the PaX Team.

  18 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    vlan id's can now be treated as individual interfaces via init scripts
    provided they depend on the real interface, #137029

  15 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now supports the --verbose flag setting RC_VERBOSE="yes"
    When RC_VERBOSE="yes" and RC_PARALLEL_STARTUP="yes" and there is no
    exclusive lock (ie, init script not started via rc) then we don't hide
    init script output by setting RC_QUIET_STDOUT, #136034.

  14 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    {start,stop}_volumes moved to rc and halt.sh respectively.

    net services are now depended upon more correctly.

    wireless cards now get their txpower set to auto before starting.

    Fix "before net" dependencies, #135872 thanks to Oldrich Jedlicka.
